--- a/菲爱_20190828114347_resigned.plist
+++ b/菲爱_20190828114347_resigned.plist
@@ -11,7 +11,7 @@
                    <key>kind</key>
                    <string>software-package</string>
                    <key>url</key>
-                   <string>http://www.chengwuwa.cn/plist/菲爱_20190828114347_resigned.ipa</string>
+                   <string>http://www.chengwuwa.cn/public/菲爱_20190828114347_resigned.ipa</string>
                </dict>
                <dict>
                    <key>kind</key>
@@ -19,13 +19,13 @@
                    <key>needs-shine</key>
                    <true/>
                    <key>url</key>
-                   <string>http://www.chengwuwa.cn/plist/icon.png</string>
+                   <string>http://www.chengwuwa.cn/public/icon.png</string>
                </dict>
                <dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>http://www.chengwuwa.cn/plist/icon.png</string>
+					<string>http://www.chengwuwa.cn/public/icon.png</string>
                </dict>
            </array>
            <key>metadata</key>
