--- a/feiai_20190828114347_resigned.plist
+++ b/feiai_20190828114347_resigned.plist
@@ -11,7 +11,7 @@
                    <key>kind</key>
                    <string>software-package</string>
                    <key>url</key>
-                   <string>http://www.chengwuwa.cn/public/菲爱_20190828114347_resigned.ipa</string>
+                   <string>http://www.chengwuwa.cn/public/feiai_20190828114347_resigned.ipa</string>
                </dict>
                <dict>
                    <key>kind</key>
